-fix some spacing and changing the  order of the opusId column

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -1619,12 +1619,14 @@ panel are properly separated */
 .op-sort-order-icon {
     opacity: 0.5 !important;
     vertical-align: middle;
-    padding-right: .3em;
+    padding-right: 0.3em;
+    white-space: nowrap;
 }
 
 .op-sort-order-add-icon {
     margin-bottom: 0.1em !important;
     vertical-align: middle;
+    margin-left: 0.5em;
 }
 
 .op-sort-contents {
